--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
@@ -3,8 +3,10 @@
 ================ */
 
 .paragraph--type--form{
-	max-width: $textMax;
-	@include auto;
+	.layout:not(.layout--twocol-sidebar) &{
+		max-width: $textMax;
+		@include auto;
+	}
 	form{
 		& > .js-form-item{
 			margin-bottom: $spaceSm;
