--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/horizontal-rule/_horizontal-rule.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/horizontal-rule/_horizontal-rule.scss
@@ -3,8 +3,10 @@
 ==================== */
 
 .paragraph--type--horizontal-rule{
-	max-width: $textMax;
-	@include auto;
+	.layout:not(.layout--twocol-sidebar) &{
+		max-width: $textMax;
+		@include auto;
+	}
 	hr{
 		border-top: 1px solid $borderRule;
 	}
