--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/links-files/_links-files.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/links-files/_links-files.scss
@@ -3,8 +3,10 @@
 ================== */
 
 .paragraph--type--links-files{
-	max-width: $textMax;
-	@include auto;
+	.layout:not(.layout--twocol-sidebar) &{
+		max-width: $textMax;
+		@include auto;
+	}
 	//set margins for links and files lists
 	.links-files{
 		margin-top: 2rem;
