--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/text/_text.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/text/_text.scss
@@ -1,9 +1,10 @@
 /* ==============
    TEXT WIDGET
 ================= */
-
 .paragraph--type--text{
-	max-width: $textMax;
-	@include auto;
+	.layout:not(.layout--twocol-sidebar) &{
+		max-width: $textMax;
+		@include auto;
+	}
 }//end links-files widget
 
