--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
@@ -7,6 +7,12 @@
 		@include edgeToEdge;
 	}
 
+	.block-title{
+		max-width: $textMax;
+		@include auto;
+		text-align: center;
+	}
+
 	.block-body{
 		max-width: 100%;
 	}
