--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
@@ -11,7 +11,7 @@ footer {
 	.footer-inner{
 		min-height: 289px;
 		padding: 30px $siteMarginMobile;
-		max-width: $contentStop;
+		max-width: $contentStop + 40px;
 		@include auto;
 		position: relative;
 		@include tab{
