--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
@@ -10,6 +10,12 @@
 		@include edgeToEdge;
 	}
 
+	.block-title{
+		max-width: $textMax;
+		@include auto;
+		text-align: center;
+	}
+
 }//end landing-page
 
 
