--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/event/_event.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/event/_event.scss
@@ -2,7 +2,40 @@
    EVENT NODE
 ================ */
 .node-event.node-content{
+
+	#section-1,#section-2{
+		max-width: $contentStop;
+		@include auto;
+		@include clearFix;
+	}
 	
+	.block-field-banner{
+		max-width: 350px;
+		@include auto;
+		@include tab{
+			float: left;
+			@include edgeReset;
+		}
+	}
+
+	.block-title{
+		.has-main-image &{
+			@include tab{
+				margin-left: 370px;
+			}
+		}
+	}
+
+
+	.block-field-date{
+		@include textDate;
+		.has-main-image &{
+			@include tab{
+				margin-left: 370px;
+			}
+		}
+	}
+
 	.block-field-event-location{
 		@include textContent;
 		//hide long/lat title
