News view and news node updates

--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-lists/_lists.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-lists/_lists.scss
@@ -2,7 +2,7 @@
 		LISTS
 ================= */
 
-.field.text-with-summary,.field,.text-long{
+.text-with-summary,.text-long{
 	ul,ol {
 		//overflow hidden is needed for lists next to floated elements
 		overflow: hidden;
