--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_news-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_news-views.scss
@@ -14,6 +14,10 @@
 		.views-row{
 			@include inlineImageRow;
 			.views-field-nothing{
+				.title{
+					@include heading4;
+					margin-bottom: $spaceXs;
+				}
 				.date{
 					@include textDate;
 					margin-bottom: $spaceXs;
