--- a/web/themes/citizen_patterns/components/css/cke.css
+++ b/web/themes/citizen_patterns/components/css/cke.css
@@ -6,7 +6,6 @@ html {
 }
 
 
-
 .media--type-image img{
 	max-width: 100%;
 	height: auto;
@@ -23,7 +22,7 @@ html {
 	clear:both;
 }
 .align-center > .media {
-	margin: 2em auto 1em;
+	margin: 2rem auto;
 	text-align: center;
 	clear:both;
 }
@@ -46,8 +45,8 @@ span.highlight{
 div.warning {
 	border: 2px solid #dd241b;
 	color: #dd241b;
-	padding: .5em 1em;
-	margin-bottom: 1.5em;
+	padding: 10px 40px;
+	margin-bottom: 3rem;
 	text-align: center;
 }
 small{
@@ -55,17 +54,16 @@ small{
 }
 
 div.button{
-		display: inline-block;
-		position: relative;
-		text-align: center;
-		max-width: 260px;
-		margin: 1em auto;
+	display: block;
+	text-align: center;
+	margin: 2rem auto;
 }
 div.button a{
-	display: block;
+	display: inline-block;
+	max-width: 260px;
 	color: #fff;
 	background: #bf0e0e;
-	padding: 10px 40px;
+	padding: 15px 40px;
 	text-decoration: none;
 }
 div.button a:hover{
@@ -107,7 +105,7 @@ h6{
 }
 
 blockquote{
-	margin: 0 auto !important;
+	margin: 2rem auto 0 !important;
 	max-width: 740px;
 	position: relative;
 	font-family: Georgia, "Times New Roman", Times, serif;
