Update profiles and global ct includes/extends

--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
@@ -92,6 +92,15 @@ $h6Sm: 18px;
 	@include auto;
 }
 
+@mixin inlineBlockTitle{
+	@include blockTitle;
+	margin-bottom: 0;
+	display: inline-block;
+	& + *{
+		display: inline;
+	}
+}
+
 
 /* HEADING STYLING
 ------------------- */
