--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/news/_news.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/news/_news.scss
@@ -18,7 +18,7 @@
 		}
 	}
 
-	.block-title{
+	.block-field.block-title{
 		.has-main-image &{
 			@include tab{
 				margin-left: 370px;
@@ -28,12 +28,8 @@
 
 
 	.block-created{
+		@extend .block-field.block-title;
 		@include textDate;
-		.has-main-image &{
-			@include tab{
-				margin-left: 370px;
-			}
-		}
 	}
 	
 }//end news
