--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
@@ -10,7 +10,7 @@
 		@include edgeToEdge;
 	}
 
-	.block-title{
+	.block-field.block-title{
 		max-width: $textMax;
 		@include auto;
 		text-align: center;
