--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
@@ -4,4 +4,52 @@
 
 .node-profiles.node-content{
 
+	#section-1,#section-2{
+		max-width: $contentStop;
+		@include auto;
+		@include clearFix;
+	}
+	
+	.block-field-profile-image{
+		max-width: 350px;
+		@include auto;
+		@include tab{
+			float: left;
+			@include edgeReset;
+		}
+	}
+
+	.block-field.block-title{
+		.has-main-image &{
+			@include tab{
+				margin-left: 370px;
+			}
+		}
+	}
+
+	.block-field-position{
+		@extend .block-field.block-title;
+		@include heading4;
+		&:not(:last-child){
+			margin-bottom: $spaceMd;
+		}
+	}
+
+	.block-field-email{
+		@extend .block-field.block-title;
+		h2.block-title{
+			@include inlineBlockTitle;
+		}
+		&:not(:last-child){
+			margin-bottom: $spaceXs;
+		}
+	}//end email
+
+	.block-field-phone{
+		@extend .block-field.block-title;
+		h2.block-title{
+			@include inlineBlockTitle;
+		}
+	}//end phone
+
 }//end news
