Tweak mobile profiles

--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
@@ -20,6 +20,9 @@
 	}
 
 	.block-field.block-title{
+		@include onlySmall{
+			text-align: center;
+		}
 		.has-main-image &{
 			@include tab{
 				margin-left: 370px;
