introduce element space

--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_00-global-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_00-global-views.scss
@@ -12,10 +12,7 @@
 	.views-field{
 		width: 100%;
 		&.views-field-field-banner{
-			margin-bottom: $spaceMd;
-			img{
-				display: block;
-			}
+			margin-bottom: $spaceSm;
 		}	
 		@include smallTab{
 			&.views-field-field-banner{
