--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_event-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_event-views.scss
@@ -10,7 +10,7 @@
 		width: 100%;
 	}
 	.view-content,.view-empty{
-		padding-bottom: 3rem;
+		padding-bottom: $elementSpace;
 		.views-row{
 			@include inlineImageRow;
 			.views-field-nothing{
