--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/news/_news.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/news/_news.scss
@@ -26,10 +26,16 @@
 		}
 	}
 
-
 	.block-created{
 		@extend .block-field.block-title;
 		@include textDate;
+	}
+
+	.block-field.block-body{
+		@extend .block-field.block-title;
+		@include tab{
+			margin-right: 0;
+		}
 	}
 	
 }//end news
