--- a/web/themes/citizen_patterns/components/_patterns/00-base/_00-breakpoints.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_00-breakpoints.scss
@@ -31,6 +31,7 @@ $siteMarginDesk: 6rem;
 /* LAYOUT VARIABLES
 -------------------- */
 $elementSpace: 3rem;
+$siteBottomSpace: 8rem;
 $sideBar: 240px;
 $sectionGutter: 40px;
 
