--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_blog-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_blog-views.scss
@@ -7,14 +7,15 @@
 ------------- */
 .blog.all-posts{
 
+	.view{
+		padding-bottom: $elementSpace;
+	}
+	
 	.view-content{
 		@include safeFlex(row,wrap,null,null);
 		@include bleed(30px);
-		padding-bottom: $elementSpace;
 	}
-	.view-empty{
-		padding-bottom: $elementSpace;
-	}
+
 	.views-row{
 		width: 100%;
 		margin-bottom: $spaceLg;
