--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_news-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-views/_news-views.scss
@@ -9,8 +9,10 @@
 	& > *{
 		width: 100%;
 	}
-	.view-content,.view-empty{
+	.view{
 		padding-bottom: $elementSpace;
+	}
+	.view-content{
 		.views-row{
 			@include inlineImageRow;
 			.views-field-nothing{
