--- a/web/themes/citizen_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -64,7 +64,7 @@
 	VARIABLES= mailchimp, constant</br>
 </p>
 </div>
-{% macro newsletter() %}mailchimp{% endmacro %}
+{% macro newsletter() %}constant{% endmacro %}
 
 <div class="macro-tile">
 <p><strong>Newsletter Display</strong></br>
