--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/footer-blocks/_footer-connect.twig
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/footer-blocks/_footer-connect.twig
@@ -6,9 +6,9 @@
 {% block blockContent %}
 	<div class="field body">
 		<ul class="social-links">
-			<li><a href="https://wwww.facebook.com" class="facebook" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			<li><a href="https://wwww.twitter.com" class="twitter" target="_blank"><i class="fab fa-twitter"></i></a></li>
-			<li><a href="https://wwww.youtube.com" class="youtube" target="_blank"><i class="fab fa-youtube"></i></a></li>
+			<li><a href="https://wwww.facebook.com" class="facebook" target="_blank" aria-label="Facebook link"><i class="fab fa-facebook"></i></a></li>
+			<li><a href="https://wwww.twitter.com" class="twitter" target="_blank" aria-label="Twitter link"><i class="fab fa-twitter"></i></a></li>
+			<li><a href="https://wwww.youtube.com" class="youtube" target="_blank" aria-label="Youtube link"><i class="fab fa-youtube"></i></a></li>
 		</ul>
 	</div>
 {% endblock %}
