--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/footer-blocks/_footer-newsletter.twig
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/footer-blocks/_footer-newsletter.twig
@@ -33,7 +33,7 @@
 			<p><a href="#" class="modal-trigger" aria-controls="news-modal">Signup</a> for our newsletter so we can annoy you forever!</p>
 			<div id="news-modal" class="modal-element">
 				<div class="modal-inner">
-					<div class="modal-header"><h2>Newsletter Signup</h2><a id="m-close" href="#" class="modal-close"><i class="fas fa-times"></i></a></div>
+					<div class="modal-header"><h2>Newsletter Signup</h2><a id="m-close" href="#" class="modal-close" aria-label="Close Modal"><i class="fas fa-times"></i></a></div>
 					<div class="modal-content">
 						<!-- Begin Mailchimp Signup Form -->
 						<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
@@ -60,15 +60,17 @@
 		{% endif %}
 	{% elseif styles.newsletter == 'constant' %}
 		{% if styles.newsletterDisplay == 'form' %}
-			<!-- Begin Constant Contact Inline Form Code -->
-				<div class="ctct-inline-form" data-form-id="6073c161-aed5-4102-b65a-4896732f67d3"></div>
-			<!-- End Constant Contact Inline Form Code -->
+			<div class="constant-form">
+				<!-- Begin Constant Contact Inline Form Code -->
+					<div class="ctct-inline-form" data-form-id="6073c161-aed5-4102-b65a-4896732f67d3"></div>
+				<!-- End Constant Contact Inline Form Code -->
+			</div>
 		{% else %}
 			<p><a href="#" class="modal-trigger" aria-controls="news-modal">Signup</a> for our newsletter so we can annoy you forever!</p>
 			<div id="news-modal" class="modal-element">
 				<div class="modal-inner">
-					<div class="modal-header"><h2>Newsletter Signup</h2><a id="m-close" href="#" class="modal-close"><i class="fas fa-times"></i></a></div>
-					<div class="modal-content">
+					<div class="modal-header"><h2>Newsletter Signup</h2><a id="m-close" href="#" class="modal-close" aria-label="Close Modal"><i class="fas fa-times"></i></a></div>
+					<div class="modal-content constant-form">
 						<!-- Begin Constant Contact Inline Form Code -->
 							<div class="ctct-inline-form" data-form-id="6073c161-aed5-4102-b65a-4896732f67d3"></div>
 						<!-- End Constant Contact Inline Form Code -->
