--- a/web/themes/citizen_patterns/templates/zzz-custom/blocks/menus/block--menu-block--page-menu.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/blocks/menus/block--menu-block--page-menu.html.twig
@@ -41,7 +41,7 @@
 <nav aria-label="section-menu" id="block-page-menu"{{ attributes|without('role', 'aria-labelledby', 'id').addClass(blockTitle,heading_id, 'page-menu') }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   {{ title_prefix }}
-  <h2 id="page-menu-title" class="block-title{% if not configuration.label_display %} visually-hidden{% endif %}"><a href="#" class="page-menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></a>{{ configuration.label }}</h2>
+  <h2 id="page-menu-title" class="block-title{% if not configuration.label_display %} visually-hidden{% endif %}"><a href="#" class="page-menu-toggle" aria-label="Mobile Page Menu Toggle"><i class="fa fa-bars" aria-hidden="true"></i></a>{{ configuration.label }}</h2>
   {{ title_suffix }}
   {# Menu. #}
   {% block content %}
