Finish accessibility tweaks

--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/blog-post/_blog-post.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/blog-post/_blog-post.scss
@@ -61,9 +61,14 @@
 		@include auto;
 	}
 
+	.block-field.block-body{
+		max-width: $textMax;
+		@include auto;
+	}
+
 	.block-flippy-block{
 		border-top: 1px solid $borderRule;
-		max-width: $contentStop;
+		max-width: $textMax;
 		@include auto;
 	}
 }//end blog post
