--- a/web/themes/citizen_patterns/components/_patterns/04-pages/_pages.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/_pages.scss
@@ -5,7 +5,10 @@ html > body:not(.is-front):not(.path-node):not(.node-type-page){
 	.layout-content{
 		max-width: $contentStop + 40px;
 		@include auto;
-		padding: $elementSpace $siteMarginMobile $siteBottomSpace;
+		padding: 0 $siteMarginMobile $siteBottomSpace;
+	}
+	#block-citizen-patterns-content{
+		padding-top: $elementSpace;
 	}
 	.block-page-title-block{
 		margin-bottom: $elementSpace;
