Adjustments to new gallery widget

--- a/web/modules/custom/citizen/css/node.css
+++ b/web/modules/custom/citizen/css/node.css
@@ -94,7 +94,7 @@
 }
 
 .field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Gallery"]{
-  background: url(../icons/gallery.svg) no-repeat;
+  background: url(../icons/galleries.svg) no-repeat;
 }
 
 .field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Horizontal Rule"]{
