Style links in layoutbuilder drawer

--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/layout-builder/_layout_builder_admin.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/layout-builder/_layout_builder_admin.scss
@@ -69,7 +69,7 @@
 				}
 			}
 		}
-	}
+	}//end block categories
 	.ui-autocomplete{
 		.ui-menu-item{
 			background: $white;
@@ -78,7 +78,7 @@
 			}
 		}
 	}
-}
+}//end drupal canvas
 
 form.layout-builder-revert-overrides{
 	padding: 0 2rem;
